crates/ir/tests/ir/snapshots/main__ir__lower__modules__use_user_trait.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__use_user_trait

type Greeting = MkGreeting#0(String)
instance user_trait_lib.Printable[Greeting] { display=Printable$$Greeting$$display }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Greeting = construct Greeting::MkGreeting#0("hi")
  let v2: Dict[user_trait_lib.Printable, Greeting] = get_dict user_trait_lib.Printable[Greeting]
  let v3: String = trait_call user_trait_lib.Printable.display(v2, v1)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v0, v3)
  v4

fn Printable$$Greeting$$display(v5: Greeting) -> String =
  "hello"
